--- a/template/iCMS/mobile/user/manage/publish.htm
+++ b/template/iCMS/mobile/user/manage/publish.htm
@@ -10,7 +10,7 @@
 	<input name="ucid" id="ucid" type="hidden" value="<!--{$article.ucid}-->" />
 	<input name="_ucid" type="hidden" value="<!--{$article.ucid}-->" />
 	<input name="_cid" type="hidden" value="<!--{$article.cid}-->" />
-
+	<input name="mobile" type="hidden" value="1" />
 
 	<h3 class="title"><span><i class="fa fa-edit"></i> 发表文章</span></h3>
 	<div class="input-group">
