--- a/template/iCMS/user/manage/publish.htm
+++ b/template/iCMS/user/manage/publish.htm
@@ -14,6 +14,8 @@ iCMS.config.UI        = '<!--{$iCMS.UI}-->';
 	<input name="ucid" id="ucid" type="hidden" value="<!--{$article.ucid}-->" />
 	<input name="_ucid" type="hidden" value="<!--{$article.ucid}-->" />
 	<input name="_cid" type="hidden" value="<!--{$article.cid}-->" />
+	<input name="mobile" type="hidden" value="0" />
+
 	<div class="title"><span>发表文章</span></div>
 	<div class="publish ml25">
 		<div class="input-prepend">
