--- a/template/iCMS/user/home.htm
+++ b/template/iCMS/user/home.htm
@@ -73,7 +73,7 @@
         <!--{/if}-->
         <div id="artList">
           <ul>
-            <!--{iCMS:article:list loop="true" page="true" row="10" userid="$user.uid"}-->
+            <!--{iCMS:article:list loop="true" page="true" row="10" userid="$user.uid" ucid="$user.category.cid"}-->
             <li class="clearfix">
               <div class="list_top">
                 <div class="rep_num" title="回复"><!--{$article_list.hits.count}--></div>
