--- a/template/iCMS/mobile/user/home.htm
+++ b/template/iCMS/mobile/user/home.htm
@@ -65,5 +65,6 @@
     iCMS.scrollLoad(".userApp_content",".userApp_day","#pages_next",<!--{$iCMS.page.total}-->);
     </script>
     <!--{include file="{iTPL}/footer.htm"}-->
+    <script src="<!--{$user.hits_script}-->"></script>
   </body>
 </html>
