--- a/template/iCMS/public.ui.htm
+++ b/template/iCMS/public.ui.htm
@@ -17,8 +17,8 @@
 <script src="<!--{$iCMS.UI}-->/bootstrap/2.3.1/js/bootstrap.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/artDialog/5.0.4/artDialog.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/artDialog/5.0.4/artDialog.plugins.min.js"></script>
-<script src="<!--{$iCMS.UI}-->/jquery.poshytip.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/iCMS-6.0.0.js"></script>
+<script src="<!--{$site.urls.ui}-->/jquery.poshytip.min.js"></script>
 <script src="<!--{$site.urls.ui}-->/iCMS-6.0.0.js"></script>
 <script src="<!--{$site.urls.ui}-->/iCMS.user-6.0.0.js"></script>
 <script src="<!--{$site.urls.ui}-->/iCMS.login-6.0.0.js"></script>
