--- a/app/ui/common/iCMS-6.0.0.css
+++ b/app/ui/common/iCMS-6.0.0.css
@@ -113,6 +113,8 @@ a.noneline { text-decoration: none !important; }
 .modal .modal-header h3 { font-size: 18px; }
 .modal .modal-footer { padding: 10px 15px; }
 .modal .modal-body { overflow: hidden; padding: 0px; max-height: 100%; height: 100%; }
+.modal .modal-body a.cancel { color: #259; margin-right: 15px; cursor: pointer; }
+.modal .modal-body a.cancel:hover { text-decoration: underline; }
 .modal .modal-loading { margin: 10px }
 .modal .buttons { padding: 0 15px; margin-bottom: 15px; text-align: right; background: #fff }
 #modal-iframe { top: 0px; left: 0px; width: 100%; height: 100%; }
