--- a/template/iCMS/public.common.htm
+++ b/template/iCMS/public.common.htm
@@ -1,5 +1,4 @@
 <div id="iPHP-DIALOG" class="hide"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</div>
-
 <div id="iCMS-MODAL" class="modal">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -26,15 +25,15 @@
           <!--{if $iCMS.config.user.loginseccode}-->
           <dd>验证码：</dd>
           <dt>
-              <input type="text" maxlength="4" name="seccode" data-container=".login_fail" class="iCMS_login_seccode iCMS_seccode">
-              <img src="<!--{iCMS:router url='/api/seccode'}-->" alt="验证码" class="iCMS_seccode_img r3"/>
-              <a href="javascript:;" class="iCMS_seccode_text" style="float: none">换一张</a>
+          <input type="text" maxlength="4" name="seccode" data-container=".login_fail" class="iCMS_login_seccode iCMS_seccode">
+          <img src="<!--{iCMS:router url='/api/seccode'}-->" alt="验证码" class="iCMS_seccode_img r3"/>
+          <a href="javascript:;" class="iCMS_seccode_text" style="float: none">换一张</a>
           </dt>
           <!--{/if}-->
           <dd class="clearfix mb5"></dd>
           <dt class="mb5">
-            <input type="checkbox" name="remember" class="iCMS_login_remember checkbox" value="1">
-            两周内免登录
+          <input type="checkbox" name="remember" class="iCMS_login_remember checkbox" value="1">
+          两周内免登录
           </dt>
           <dd class="clearfix mb5"></dd>
           <dt>
@@ -64,13 +63,31 @@
       <li><label><input value="4" name="reason" type="radio">不宜公开讨论的政治内容</label></li>
       <li><label><input value="0" name="reason" type="radio">其他（可自行填写）</label>
       <p class="input-container visible-if-checked">
-      <input placeholder="请填写原因" type="text" name="content" class="reason-text zg-form-text-input">
+        <input placeholder="请填写原因" type="text" name="content" class="reason-text zg-form-text-input">
       </p>
     </li>
   </ul>
   <div class="buttons clearfix">
-    <input type="button" name="cancel" class="btn" value="取消">
-    <input type="button" name="ok" class="btn btn-primary" value="确定">
+    <a class="cancel">取消</a>
+    <button type="button" name="ok" class="btn btn-primary">确定</button>
   </div>
 </div>
+</div>
+<div id="iCMS-pm-box">
+  <div class="iCMS_pm_dialog">
+    <dl>
+      <dt><label>发给：</label></dt>
+      <dd>
+        <a class="pm_inbox" href="javascript:;">私信记录 »</a>
+        <p class="pm_uname"></p>
+      </dd>
+      <div class="clearfix mt10"></div>
+      <dt><label>内容：</label></dt>
+      <dd><textarea class="pm_content" name="content"></textarea></dd>
+    </dl>
+    <div class="buttons clearfix mt15">
+      <a class="cancel">取消</a>
+      <button type="button" name="send" class="btn btn-primary">发送</button>
+    </div>
+  </div>
 </div>
