--- a/template/iCMS/user/manage/article.htm
+++ b/template/iCMS/user/manage/article.htm
@@ -16,7 +16,7 @@
 				<tr>
 					<th>#</th>
 					<th><span class="label label-info">分类</span> 标题</th>
-					<th>点/评</th>
+					<th>点/评/顶/踩</th>
 					<th>栏目</th>
 					<th>操作</th>
 				</tr>
@@ -36,7 +36,7 @@
 						<!--{/if}-->
 						<span class="label label-info"><!--{$category[$article_list.ucid].name}--></span>
 						<a href="<!--{if $article_list.status=="1"}--><!--{$article_list.url}--><!--{else}-->javascript:;<!--{/if}-->" target="_blank"><!--{$article_list.title}--></a></td>
-					<td><!--{$article_list.hits.count}-->/<!--{$article_list.comments}--></td>
+					<td><!--{$article_list.hits.count}-->/<!--{$article_list.comments}-->/<!--{$article_list.good}-->/<!--{$article_list.bad}--></td>
 					<td><a href="<!--{$article.manage}-->&cid=<!--{$article_list.cid}-->"><!--{$article_list.category.name}--></a></td>
 					<td class="action">
 						<a class="tip" href="<!--{$article.edit}-->&id=<!--{$article_list.id}-->" title="编辑文章"><i class="fa fa-edit"></i></a>
